--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="conteiner header__conteiner">
         <a href="./index.html" class="header__logo">
-          <span class="header__text--accent">Web</span>Studio</a
+          <span class="header__text header__text--accent">Web</span>Studio</a
         >
         <nav class="navigation">
           <ul class="navigation__list">
@@ -37,21 +37,18 @@
             </li>
           </ul>
         </nav>
-        <ul class="header-contact">
-          <li class="header-contact-email">
-            <a
-              href="mailto:info@devstudio.com"
-              class="header-contact-link hover-accent link-inherit"
-            >
-              <svg class="header-contact-email-icon" width="16" height="12">
+        <ul class="contact-header">
+          <li class="contact-header__item">
+            <a href="mailto:info@devstudio.com" class="contact-header__link">
+              <svg class="contact-header__icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="header-contact-tel">
-            <a href="tel:+380961111111" class="header-contact-link hover-accent link-inherit">
-              <svg class="header-contact-tel-icon" width="10" height="16">
+          <li class="contact-header__item">
+            <a href="tel:+380961111111" class="contact-header__link">
+              <svg class="contact-header__icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
