Додав hero і benefits

--- a/index.html
+++ b/index.html
@@ -60,59 +60,55 @@
     <main class="main">
       <section class="hero section">
         <div class="conteiner">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-btn _btn" data-modal-open>Замовити послугу</button>
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="hero__btn" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <section class="benefits section">
         <div class="conteiner">
-          <h2 class="section-title visually-hidden">Наші переваги</h2>
-          <ul class="benefits-list">
-            <li class="benefits-item">
-              <div class="benefits-img">
-                <svg class="benefits-img-vector" width="70" height="70">
+          <h2 class="section__title visually-hidden">Наші переваги</h2>
+          <ul class="benefits__list">
+            <li class="benefits__item">
+              <div class="benefits__img">
+                <svg class="benefits__vector" width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="benefits-subtitle">Увага до деталей</h3>
-              <p class="benefits-text">
+              <h3 class="benefits__subtitle">Увага до деталей</h3>
+              <p class="benefits__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="benefits-item">
-              <div class="benefits-img">
-                <svg class="benefits-img-vector" width="70" height="70">
+            <li class="benefits__item">
+              <div class="benefits__img">
+                <svg class="benefits__vector" width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <div class="benefits-content">
-                <h3 class="benefits-subtitle">Пунктуальність</h3>
-                <p class="benefits-text">
-                  Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                </p>
-              </div>
+              <h3 class="benefits__subtitle">Пунктуальність</h3>
+              <p class="benefits__text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
             </li>
-            <li class="benefits-item">
-              <div class="benefits-img">
-                <svg class="benefits-img-vector" width="70" height="70">
+            <li class="benefits__item">
+              <div class="benefits__img">
+                <svg class="benefits__vector" width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <div class="benefits-content">
-                <h3 class="benefits-subtitle">Планування</h3>
-                <p class="benefits-text">
-                  Так само консультація з широким активом значною мірою зумовлює.
-                </p>
-              </div>
+              <h3 class="benefits__subtitle">Планування</h3>
+              <p class="benefits__text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
             </li>
-            <li class="benefits-item">
-              <div class="benefits-img">
-                <svg class="benefits-img-vector" width="70" height="70">
+            <li class="benefits__item">
+              <div class="benefits__img">
+                <svg class="benefits__vector" width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="benefits-subtitle">Сучасні технології</h3>
-              <p class="benefits-text">
+              <h3 class="benefits__subtitle">Сучасні технології</h3>
+              <p class="benefits__text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
               </p>
             </li>
@@ -121,37 +117,37 @@
       </section>
       <section class="works section">
         <div class="conteiner">
-          <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="works-list">
-            <li class="works-item">
+          <h2 class="section__title">Чим ми займаємося</h2>
+          <ul class="works__list">
+            <li class="works__item">
               <img
-                class="works-img"
+                class="works__img"
                 src="./images/works-1.jpg"
                 alt="Декстопні додатки"
                 width="370"
                 height="294"
               />
-              <p class="works-item-label">Декстопні додатки</p>
+              <p class="works__label">Декстопні додатки</p>
             </li>
-            <li class="works-item">
+            <li class="works__item">
               <img
-                class="works-img"
+                class="works__img"
                 src="./images/works-2.jpg"
                 alt="Мобільні додатки"
                 width="370"
                 height="294"
               />
-              <p class="works-item-label">Мобільні додатки</p>
+              <p class="works__label">Мобільні додатки</p>
             </li>
-            <li class="works-item">
+            <li class="works__item">
               <img
-                class="works-img"
+                class="works__img"
                 src="./images/works-3.jpg"
                 alt="Дизайнерські рішення"
                 width="370"
                 height="294"
               />
-              <p class="works-item-label">Дизайнерські рішення</p>
+              <p class="works__label">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
