Переробив work-section

--- a/index.html
+++ b/index.html
@@ -154,64 +154,64 @@
       </section>
       <section class="team section">
         <div class="conteiner">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list">
-            <li class="team-item">
+          <h2 class="section__title">Наша команда</h2>
+          <ul class="team__list">
+            <li class="team__item">
               <img
-                class="team-img"
+                class="team__img"
                 src="./images/igor.jpg"
                 alt="Дизайнер проектів"
                 width="270"
                 height="260"
               />
-              <div class="team-text">
-                <h3 class="team-subtitle">Ігор Дем'яненко</h3>
-                <p lang="en" class="team-description">Product Designer</p>
-                <ul class="team-links">
-                  <li class="team-link">
+              <div class="team__content">
+                <h3 class="team__subtitle">Ігор Дем'яненко</h3>
+                <p lang="en" class="team__description">Product Designer</p>
+                <ul class="team__links">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.instagram.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://twitter.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.facebook.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.linkedin.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -219,63 +219,63 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img
-                class="team-img"
+                class="team__img"
                 src="./images/olga.jpg"
                 alt="Фронтенд розробник"
                 width="270"
                 height="260"
               />
-              <div class="team-text">
-                <h3 class="team-subtitle">Ольга Рєпіна</h3>
-                <p lang="en" class="team-description">Frontend Developer</p>
+              <div class="team__content">
+                <h3 class="team__subtitle">Ольга Рєпіна</h3>
+                <p lang="en" class="team__description">Frontend Developer</p>
 
-                <ul class="team-links">
-                  <li class="team-link">
+                <ul class="team__links">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.instagram.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://twitter.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.facebook.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.linkedin.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -283,62 +283,62 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img
-                class="team-img"
+                class="team__img"
                 src="./images/mykola.jpg"
                 alt="Маркетинг"
                 width="270"
                 height="260"
               />
-              <div class="team-text">
-                <h3 class="team-subtitle">Микола Тарасов</h3>
-                <p lang="en" class="team-description">Marketing</p>
-                <ul class="team-links">
-                  <li class="team-link">
+              <div class="team__content">
+                <h3 class="team__subtitle">Микола Тарасов</h3>
+                <p lang="en" class="team__description">Marketing</p>
+                <ul class="team__links">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.instagram.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://twitter.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.facebook.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.linkedin.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -346,62 +346,62 @@
                 </ul>
               </div>
             </li>
-            <li class="team-item">
+            <li class="team__item">
               <img
-                class="team-img"
+                class="team__img"
                 src="./images/myhaylo.jpg"
                 alt="ІЕ Дизайнер"
                 width="270"
                 height="260"
               />
-              <div class="team-text">
-                <h3 class="team-subtitle">Михайло Єрмаков</h3>
-                <p lang="en" class="team-description">UI Designer</p>
-                <ul class="team-links">
-                  <li class="team-link">
+              <div class="team__content">
+                <h3 class="team__subtitle">Михайло Єрмаков</h3>
+                <p lang="en" class="team__description">UI Designer</p>
+                <ul class="team__links">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.instagram.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://twitter.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.facebook.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team-link">
+                  <li class="team__link link-team">
                     <a
                       href="https://www.linkedin.com/"
-                      class="link-inherit"
+                      class="link-team__item"
                       target="_blank"
                       rel="noopener nofollow noreferrer"
                     >
-                      <svg class="team-link-vector" width="20" height="20">
+                      <svg class="link-team__vector" width="20" height="20">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -542,7 +542,7 @@
                   target="_blank"
                   rel="noopener nofollow noreferrer"
                 >
-                  <svg class="team-link-vector" width="20" height="20">
+                  <svg class="link-team__vector" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
