Переробив секцію team і clients

--- a/index.html
+++ b/index.html
@@ -414,46 +414,46 @@
       </section>
       <section class="clients section">
         <div class="conteiner">
-          <h2 class="section-title">Постійні клієнти</h2>
-          <ul class="clients-list">
-            <li class="clients-item">
-              <a href="#" class="link-inherit">
-                <svg class="clients-item-vector" width="41" height="47">
+          <h2 class="section__title">Постійні клієнти</h2>
+          <ul class="clients__list">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <svg class="clients__vector" width="41" height="47">
                   <use href="./images/icons.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="#" class="link-inherit">
-                <svg class="clients-item-vector" width="40" height="52">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <svg class="clients__vector" width="40" height="52">
                   <use href="./images/icons.svg#icon-company-tag"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="#" class="link-inherit">
-                <svg class="clients-item-vector" width="43" height="41">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <svg class="clients__vector" width="43" height="41">
                   <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="#" class="link-inherit">
-                <svg class="clients-item-vector" width="84" height="41">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <svg class="clients__vector" width="84" height="41">
                   <use href="./images/icons.svg#icon-foster"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="#" class="link-inherit">
-                <svg class="clients-item-vector" width="63" height="45">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <svg class="clients__vector" width="63" height="45">
                   <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-item">
-              <a href="#" class="link-inherit">
-                <svg class="clients-item-vector" width="94" height="44">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <svg class="clients__vector" width="94" height="44">
                   <use href="./images/icons.svg#icon-company-tag-line"></use>
                 </svg>
               </a>
