Почав робити футер

--- a/index.html
+++ b/index.html
@@ -464,105 +464,100 @@
     </main>
     <footer class="footer">
       <div class="conteiner">
-        <div class="footer-wrap">
-          <div class="footer-address-wrap">
-            <a class="footer-logo logo" href="./index.html">
-              <p><span class="accent">Web</span>Studio</p></a
+        <div class="footer__wrap">
+          <div class="address">
+            <a class="footer__logo" href="./index.html">
+              <p><span class="footer__text footer__text--accent">Web</span>Studio</p></a
             >
-            <address>
-              <ul class="footer-contact">
-                <li class="footer-contact-address">
+            <address class="address__content">
+              <ul class="address__list">
+                <li class="address__item">
                   <a
                     href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=uk"
                     target="_blank"
                     rel="noopener nofollow noreferrer"
-                    class="footer-contact-link link-inherit"
+                    class="address__link"
                   >
                     м. Київ, пр-т Лесі Українки, 26
                   </a>
                 </li>
-                <li class="footer-contact-email">
-                  <a
-                    href="mailto:info@devstudio.com"
-                    class="footer-contact-link hover-accent link-inherit"
-                    >info@devstudio.com</a
-                  >
+                <li class="address__item">
+                  <a href="mailto:info@devstudio.com" class="address__link">info@devstudio.com</a>
                 </li>
-                <li class="footer-contact-tel">
-                  <a href="tel:+380961111111" class="footer-contact-link hover-accent link-inherit"
-                    >+38 096 111 11 11
-                  </a>
+                <li class="address__item">
+                  <a href="tel:+380961111111" class="address__link">+38 096 111 11 11 </a>
                 </li>
               </ul>
             </address>
           </div>
-          <div class="footer-link-wrap">
-            <strong class="footer-link-text">Приєднуйтесь</strong>
-            <ul class="footer-links">
-              <li class="footer-link">
+          <div class="footer-links">
+            <strong class="footer-links__appeal">Приєднуйтесь</strong>
+            <ul class="footer-links__list">
+              <li class="footer-links__item">
                 <a
                   href="https://www.instagram.com/"
-                  class="link-inherit"
+                  class="footer-links__link"
                   target="_blank"
                   rel="noopener nofollow noreferrer"
                 >
-                  <svg class="footer-link-vector" width="20" height="20">
+                  <svg class="footer-links__vector" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="footer-link">
+              <li class="footer-links__item">
                 <a
                   href="https://twitter.com/"
-                  class="link-inherit"
+                  class="footer-links__link"
                   target="_blank"
                   rel="noopener nofollow noreferrer"
                 >
-                  <svg class="footer-link-vector" width="20" height="20">
+                  <svg class="footer-links__vector" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="footer-link">
+              <li class="footer-links__item">
                 <a
                   href="https://www.facebook.com/"
-                  class="link-inherit"
+                  class="footer-links__link"
                   target="_blank"
                   rel="noopener nofollow noreferrer"
                 >
-                  <svg class="footer-link-vector" width="20" height="20">
+                  <svg class="footer-links__vector" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="footer-link">
+              <li class="footer-links__item">
                 <a
                   href="https://www.linkedin.com/"
-                  class="link-inherit"
+                  class="footer-links__link"
                   target="_blank"
                   rel="noopener nofollow noreferrer"
                 >
-                  <svg class="link-team__vector" width="20" height="20">
+                  <svg class="footer-links__vector" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="footer-form-wrap">
-            <label class="footer-form-label" for="subscription-email"
+          <div class="footer-form">
+            <label class="footer-form__label" for="subscription-email"
               >Підпишіться на розсилку</label
             >
-            <form class="footer-form">
+            <form class="footer-form__content">
               <input
                 type="email"
                 name="subscription-email"
                 id="subscription-email"
                 placeholder="E-mail"
+                class="footer-form__input"
               />
-              <button type="submit" class="footer-btn _btn">
+              <button type="submit" class="footer-form__btn">
                 <span>Підписатися</span>
-                <svg class="footer-btn-vector" width="24" height="24">
+                <svg class="footer-form__vector" width="24" height="24">
                   <use href="./images/icons.svg#icon-form-btn"></use>
                 </svg>
               </button>
