--- a/index.html
+++ b/index.html
@@ -568,27 +568,39 @@
     </footer>
     <div class="modal-page is-hidden" data-modal>
       <div class="modal-form">
-        <button type="button" class="modal-btn" data-modal-close>
-          <svg class="modal-close-btn" width="11" height="11">
+        <button type="button" class="modal-form__close-btn" data-modal-close>
+          <svg class="modal-form__close-vector" width="11" height="11">
             <use href="./images/icons.svg#icon-close-modal"></use>
           </svg>
         </button>
-        <h2 class="modal-form-title">Залиште свої дані, ми вам передзвонимо</h2>
-        <form class="modal-form-item">
+        <h2 class="modal-form__title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="modal-form__content">
           <div class="form-field">
-            <input type="text" name="user-name" id="user-name" class="form-input" placeholder=" " />
-            <label class="form-label" for="user-name">
-              <span class="form-label-text">Ім'я</span>
-              <svg class="form-label-icon" width="18" height="18">
+            <input
+              type="text"
+              name="user-name"
+              id="user-name"
+              class="form-field__input"
+              placeholder=" "
+            />
+            <label class="form-field__label" for="user-name">
+              <span class="form-field__text">Ім'я</span>
+              <svg class="form-field__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-form-name"></use>
               </svg>
             </label>
           </div>
           <div class="form-field">
-            <input type="tel" name="user-tel" id="user-tel" class="form-input" placeholder=" " />
-            <label class="form-label" for="user-tel">
-              <span class="form-label-text">Телефон</span>
-              <svg class="form-label-icon" width="18" height="18">
+            <input
+              type="tel"
+              name="user-tel"
+              id="user-tel"
+              class="form-field__input"
+              placeholder=" "
+            />
+            <label class="form-field__label" for="user-tel">
+              <span class="form-field__text">Телефон</span>
+              <svg class="form-field__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-form-phone"></use>
               </svg>
             </label>
@@ -598,23 +610,23 @@
               type="email"
               name="user-email"
               id="user-email"
-              class="form-input"
+              class="form-field__input"
               placeholder=" "
             />
-            <label class="form-label" for="user-email">
-              <span class="form-label-text">Пошта</span>
-              <svg class="form-label-icon" width="18" height="18">
+            <label class="form-field__label" for="user-email">
+              <span class="form-field__text">Пошта</span>
+              <svg class="form-field__icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-form-email"></use>
               </svg>
             </label>
           </div>
-          <div class="form-field-comment">
-            <label class="form-label-comment">
+          <div class="form-field-textarea">
+            <label class="form-field-textarea__label">
               <span>Коментар</span>
               <textarea
                 name="user-comment"
                 rows="10"
-                class="form-input-comment"
+                class="form-field-textarea__input"
                 placeholder="Введіть коментар"
               ></textarea>
             </label>
@@ -623,18 +635,18 @@
             <input
               type="checkbox"
               name="policy"
-              class="checkbox-input visually-hidden"
+              class="checkbox__input visually-hidden"
               id="policy"
               required
             />
-            <label class="checkbox-label" for="policy">
-              <span class="checkbox-input-customize"></span>
-              <p class="checkbox-text">
+            <label class="checkbox__label" for="policy">
+              <span class="checkbox__input--customize"></span>
+              <p class="checkbox__text">
                 Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a>
               </p>
             </label>
           </div>
-          <button type="submit" class="modal-form-btn _btn">Відправити</button>
+          <button type="submit" class="modal-form__btn">Відправити</button>
         </form>
       </div>
     </div>
