Зробив модальне вікно

--- a/index.html
+++ b/index.html
@@ -642,7 +642,8 @@
             <label class="checkbox__label" for="policy">
               <span class="checkbox__input--customize"></span>
               <p class="checkbox__text">
-                Погоджуюся з розсилкою та приймаю <a href="#">Умови договору</a>
+                Погоджуюся з розсилкою та приймаю
+                <a class="checkbox__link" href="#">Умови договору</a>
               </p>
             </label>
           </div>
