--- a/index.html
+++ b/index.html
@@ -639,7 +639,10 @@
               required
             />
             <label class="checkbox__label" for="policy">
-              <span class="checkbox__input--customize"></span>
+              <svg class="checkbox__input--customize" width="16" height="15">
+                <use class="checkbox__on" href="../images/icons.svg#icon-checkbox-on"></use>
+                <use class="checkbox__off" href="./images/icons.svg#icon-checkbox-off"></use>
+              </svg>
               <p class="checkbox__text">
                 Погоджуюся з розсилкою та приймаю
                 <a class="checkbox__link" href="#">Умови договору</a>
